# conan-opengl-practice

./: CMakeLists.txt  LICENSE  README.md  conanfile.py
src/: conan-opengl-practice.cpp  conan-opengl-practice.h  main.cpp
test_package/: conanfile.py
